[metadata]
name = networking-mlnx-baremetal
summary =
    This project aims to provide a OpenStack Neutron ML2 mechanism driver for
    binding or unbinding partition key for mellanox infiniband port when
    provisioning baremetal node using OpenStack Ironic component.
author = Qianbiao.NG
author-email = iampurse@vip.qq.com
home-page = https://github.com/IamFive/networking-mlnx-baremetal
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages =
    networking_mlnx_baremetal

[entry_points]
oslo.config.opts =
    mlnx.baremetal.driver = networking_mlnx_baremetal.plugins.ml2.config:list_opts
    mlnx.ironic.client = networking_mlnx_baremetal.ironic_client:list_opts

neutron.ml2.mechanism_drivers =
    mlnx_ib_bm = networking_mlnx_baremetal.plugins.ml2.mech_ib_baremetal:InfiniBandBaremetalMechanismDriver

[pbr]
autodoc_index_modules = True
api_doc_dir = contributor/api

[compile_catalog]
directory = networking_mlnx_baremetal/locale
domain = networking_mlnx_baremetal

[update_catalog]
domain = networking_mlnx_baremetal
output_dir = networking_mlnx_baremetal/locale
input_file = networking_mlnx_baremetal/locale/networking_mlnx_baremetal.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = networking_mlnx_baremetal/locale/networking_mlnx_baremetal.pot
